# bootstrap-spack

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
bootstrap/application/: build_specs.py  check_toolchain.py  derive_policy.py  detect_packages.py  inspect_linkage.py
bootstrap/core/: package_registry.py
bootstrap/domain/: models.py  toolchain_policy.py
bootstrap/env/: egeon.yaml  jaci.yaml
bootstrap/interfaces/: cli.py
bootstrap/services/: bootstrap_service.py
bootstrap/shared/: cache.py  command_runner.py  exceptions.py  retry.py  (+2 more)
docs/: how-to-add-a-new-machine.md  how-to-read-detection-report.md  known-limitations.md  release-checklist-1.0.0.md  spack-stack-compatibility-investigation.md  support-matrix.md  user-manual.md  when-to-use-overrides.md
env/: egeon.yaml  jaci.yaml  linux.yaml  linux_pc_site_only.yaml  linux_pc_spack_stack_site.yaml  linux_spack_stack_site.yaml  linux_spack_stack_site_nomodules.yaml
tests/: test_bootstrap_service_external_promotion_modes.py  test_bootstrap_service_integration.py  test_bootstrap_service_linux_fixture_integration.py  test_bootstrap_service_platform_override_integration.py  test_command_runner.py  test_config_loader_site.py  test_detect_packages.py  test_env_runtime.py  test_package_registry.py  test_packages_yaml.py  test_platform_detector.py  test_policy_derivation.py  test_policy_platform_derivation.py  test_policy_rendering_platform.py  test_renderers_site_files.py  test_site_runtime_config.py  test_site_tree.py  test_spec_builder.py  test_toolchain_policy.py  test_validation_patch_prefix.py
(+27 files in other folders)
