[project]
name = "bootstrap-spack"
version = "0.1.0"
description = "HPC external package detection and Spack bootstrap generator"
authors = [
    { name = "João Gerd" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
bootstrap = "bootstrap.interfaces.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
